# savanna-contracts

./: CMakeLists.txt  README.md
contracts/: CMakeLists.txt
contracts/common/: bitset.hpp  savanna.hpp
contracts/ibc/: CMakeLists.txt
contracts/ibc/include/: ibc.hpp
contracts/ibc/src/: ibc.cpp
tests/: contracts.hpp.in  finality_proof.hpp  main.cpp  svnn_ibc_tests.cpp
